# back-end/domain/entities/schedule.js
@@ -9,27 +9,33 @@ const Schedule = model
     userId: model.string().required(),
     entryTime: model.date().required(),
     exitTime: model.date().required(),
+    visible: model.boolean().default(true),
     createdAt: model.date().default(new Date()),
     updatedAt: model.date()
   })
   .options({ abortEarly: false });
 
-const NewScheduleObject = (Description, UserId, EntryTime, ExitTime) => {
+Schedule.NewScheduleObject = (description, userId, entryTime, exitTime) => {
   let _schedule = {
-    Description,
-    UserId,
-    EntryTime,
-    ExitTime
+    description,
+    userId,
+    entryTime,
+    exitTime
   };
 
   let validItem = Schedule.validate(_schedule);
 
-  // if (validItem.error) throw validItem.error.details;
+  return validItem;
+};
+
+Schedule.UpdateScheduleObject = UpdateObject => {
+  let validItem = Schedule.validate(UpdateObject);
+
+  if (validItem.error) return validItem;
+
+  validItem.value.updatedAt = new Date();
 
   return validItem;
 };
 
-module.exports = {
-  ...Schedule,
-  NewScheduleObject
-};
+module.exports = Schedule;
